general news removed
