# docs/swagger.json
@@ -65,33 +65,6 @@
                 }
             }
         },
-        "/general_news": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "News"
-                ],
-                "summary": "Get general news",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/data.GeneralNews"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/login": {
             "post": {
                 "consumes": [
@@ -111,7 +84,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/data.AuthRequest"
+                            "$ref": "#/definitions/auth_data.AuthRequest"
                         }
                     }
                 ],
@@ -262,7 +235,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/data.AuthRequest"
+                            "$ref": "#/definitions/auth_data.AuthRequest"
                         }
                     }
                 ],
@@ -334,6 +307,17 @@
         }
     },
     "definitions": {
+        "auth_data.AuthRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "candidate_data.Candidate": {
             "type": "object",
             "properties": {
@@ -395,40 +379,6 @@
                         "deputy",
                         "manager"
                     ]
-                }
-            }
-        },
-        "data.AuthRequest": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "data.GeneralNews": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "paragraph": {
-                    "type": "string"
-                },
-                "photo": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
                 }
             }
         },
